project/createview.output
Grammar

    0 $accept: result $end

    1 result: s nl

    2 s: crt view id as slct star frm id MT join S4 G sort sc
    3  | crt view id as slct column frm id MT join S4 G sort sc

    4 MT: comma id
    5   | /* empty */

    6 join: nj id
    7     | /* empty */

    8 condition: id LT F logical
    9          | id GT F logical
   10          | id LE F logical
   11          | id GE F logical
   12          | id NE F logical
   13          | id EQ F logical

   14 logical: AND condition
   15        | OR condition
   16        | /* empty */

   17 S4: whr condition
   18   | /* empty */

   19 G: g by column
   20  | /* empty */

   21 column: id comma column
   22       | agrfunc comma column
   23       | agrfunc
   24       | id

   25 agrfunc: sum ob column cb
   26        | cnt ob star cb
   27        | cnt ob column cb
   28        | avg ob column cb

   29 sort: odr by id
   30     | odr by id asc
   31     | odr by id desc
   32     | /* empty */

   33 F: si id si
   34  | di id di
   35  | num ds num ds num
   36  | num


Terminals, with rules where they appear

$end (0) 0
error (256)
crt (258) 2 3
view (259) 2 3
g (260) 19
ob (261) 25 26 27 28
id (262) 2 3 4 6 8 9 10 11 12 13 21 24 29 30 31 33 34
cb (263) 25 26 27 28
as (264) 2 3
slct (265) 2 3
comma (266) 4 21 22
frm (267) 2 3
whr (268) 17
sc (269) 2 3
star (270) 2 26
nl (271) 1
LT (272) 8
GT (273) 9
LE (274) 10
GE (275) 11
NE (276) 12
AND (277) 14
OR (278) 15
EQ (279) 13
si (280) 33
di (281) 34
ds (282) 35
num (283) 35 36
odr (284) 29 30 31
by (285) 19 29 30 31
asc (286) 30
desc (287) 31
nj (288) 6
sum (289) 25
cnt (290) 26 27
avg (291) 28


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
result (38)
    on left: 1, on right: 0
s (39)
    on left: 2 3, on right: 1
MT (40)
    on left: 4 5, on right: 2 3
join (41)
    on left: 6 7, on right: 2 3
condition (42)
    on left: 8 9 10 11 12 13, on right: 14 15 17
logical (43)
    on left: 14 15 16, on right: 8 9 10 11 12 13
S4 (44)
    on left: 17 18, on right: 2 3
G (45)
    on left: 19 20, on right: 2 3
column (46)
    on left: 21 22 23 24, on right: 3 19 21 22 25 27 28
agrfunc (47)
    on left: 25 26 27 28, on right: 22 23
sort (48)
    on left: 29 30 31 32, on right: 2 3
F (49)
    on left: 33 34 35 36, on right: 8 9 10 11 12 13


state 0

    0 $accept: . result $end

    crt  shift, and go to state 1

    result  go to state 2
    s       go to state 3


state 1

    2 s: crt . view id as slct star frm id MT join S4 G sort sc
    3  | crt . view id as slct column frm id MT join S4 G sort sc

    view  shift, and go to state 4


state 2

    0 $accept: result . $end

    $end  shift, and go to state 5


state 3

    1 result: s . nl

    nl  shift, and go to state 6


state 4

    2 s: crt view . id as slct star frm id MT join S4 G sort sc
    3  | crt view . id as slct column frm id MT join S4 G sort sc

    id  shift, and go to state 7


state 5

    0 $accept: result $end .

    $default  accept


state 6

    1 result: s nl .

    $default  reduce using rule 1 (result)


state 7

    2 s: crt view id . as slct star frm id MT join S4 G sort sc
    3  | crt view id . as slct column frm id MT join S4 G sort sc

    as  shift, and go to state 8


state 8

    2 s: crt view id as . slct star frm id MT join S4 G sort sc
    3  | crt view id as . slct column frm id MT join S4 G sort sc

    slct  shift, and go to state 9


state 9

    2 s: crt view id as slct . star frm id MT join S4 G sort sc
    3  | crt view id as slct . column frm id MT join S4 G sort sc

    id    shift, and go to state 10
    star  shift, and go to state 11
    sum   shift, and go to state 12
    cnt   shift, and go to state 13
    avg   shift, and go to state 14

    column   go to state 15
    agrfunc  go to state 16


state 10

   21 column: id . comma column
   24       | id .

    comma  shift, and go to state 17

    $default  reduce using rule 24 (column)


state 11

    2 s: crt view id as slct star . frm id MT join S4 G sort sc

    frm  shift, and go to state 18


state 12

   25 agrfunc: sum . ob column cb

    ob  shift, and go to state 19


state 13

   26 agrfunc: cnt . ob star cb
   27        | cnt . ob column cb

    ob  shift, and go to state 20


state 14

   28 agrfunc: avg . ob column cb

    ob  shift, and go to state 21


state 15

    3 s: crt view id as slct column . frm id MT join S4 G sort sc

    frm  shift, and go to state 22


state 16

   22 column: agrfunc . comma column
   23       | agrfunc .

    comma  shift, and go to state 23

    $default  reduce using rule 23 (column)


state 17

   21 column: id comma . column

    id   shift, and go to state 10
    sum  shift, and go to state 12
    cnt  shift, and go to state 13
    avg  shift, and go to state 14

    column   go to state 24
    agrfunc  go to state 16


state 18

    2 s: crt view id as slct star frm . id MT join S4 G sort sc

    id  shift, and go to state 25


state 19

   25 agrfunc: sum ob . column cb

    id   shift, and go to state 10
    sum  shift, and go to state 12
    cnt  shift, and go to state 13
    avg  shift, and go to state 14

    column   go to state 26
    agrfunc  go to state 16


state 20

   26 agrfunc: cnt ob . star cb
   27        | cnt ob . column cb

    id    shift, and go to state 10
    star  shift, and go to state 27
    sum   shift, and go to state 12
    cnt   shift, and go to state 13
    avg   shift, and go to state 14

    column   go to state 28
    agrfunc  go to state 16


state 21

   28 agrfunc: avg ob . column cb

    id   shift, and go to state 10
    sum  shift, and go to state 12
    cnt  shift, and go to state 13
    avg  shift, and go to state 14

    column   go to state 29
    agrfunc  go to state 16


state 22

    3 s: crt view id as slct column frm . id MT join S4 G sort sc

    id  shift, and go to state 30


state 23

   22 column: agrfunc comma . column

    id   shift, and go to state 10
    sum  shift, and go to state 12
    cnt  shift, and go to state 13
    avg  shift, and go to state 14

    column   go to state 31
    agrfunc  go to state 16


state 24

   21 column: id comma column .

    $default  reduce using rule 21 (column)


state 25

    2 s: crt view id as slct star frm id . MT join S4 G sort sc

    comma  shift, and go to state 32

    $default  reduce using rule 5 (MT)

    MT  go to state 33


state 26

   25 agrfunc: sum ob column . cb

    cb  shift, and go to state 34


state 27

   26 agrfunc: cnt ob star . cb

    cb  shift, and go to state 35


state 28

   27 agrfunc: cnt ob column . cb

    cb  shift, and go to state 36


state 29

   28 agrfunc: avg ob column . cb

    cb  shift, and go to state 37


state 30

    3 s: crt view id as slct column frm id . MT join S4 G sort sc

    comma  shift, and go to state 32

    $default  reduce using rule 5 (MT)

    MT  go to state 38


state 31

   22 column: agrfunc comma column .

    $default  reduce using rule 22 (column)


state 32

    4 MT: comma . id

    id  shift, and go to state 39


state 33

    2 s: crt view id as slct star frm id MT . join S4 G sort sc

    nj  shift, and go to state 40

    $default  reduce using rule 7 (join)

    join  go to state 41


state 34

   25 agrfunc: sum ob column cb .

    $default  reduce using rule 25 (agrfunc)


state 35

   26 agrfunc: cnt ob star cb .

    $default  reduce using rule 26 (agrfunc)


state 36

   27 agrfunc: cnt ob column cb .

    $default  reduce using rule 27 (agrfunc)


state 37

   28 agrfunc: avg ob column cb .

    $default  reduce using rule 28 (agrfunc)


state 38

    3 s: crt view id as slct column frm id MT . join S4 G sort sc

    nj  shift, and go to state 40

    $default  reduce using rule 7 (join)

    join  go to state 42


state 39

    4 MT: comma id .

    $default  reduce using rule 4 (MT)


state 40

    6 join: nj . id

    id  shift, and go to state 43


state 41

    2 s: crt view id as slct star frm id MT join . S4 G sort sc

    whr  shift, and go to state 44

    $default  reduce using rule 18 (S4)

    S4  go to state 45


state 42

    3 s: crt view id as slct column frm id MT join . S4 G sort sc

    whr  shift, and go to state 44

    $default  reduce using rule 18 (S4)

    S4  go to state 46


state 43

    6 join: nj id .

    $default  reduce using rule 6 (join)


state 44

   17 S4: whr . condition

    id  shift, and go to state 47

    condition  go to state 48


state 45

    2 s: crt view id as slct star frm id MT join S4 . G sort sc

    g  shift, and go to state 49

    $default  reduce using rule 20 (G)

    G  go to state 50


state 46

    3 s: crt view id as slct column frm id MT join S4 . G sort sc

    g  shift, and go to state 49

    $default  reduce using rule 20 (G)

    G  go to state 51


state 47

    8 condition: id . LT F logical
    9          | id . GT F logical
   10          | id . LE F logical
   11          | id . GE F logical
   12          | id . NE F logical
   13          | id . EQ F logical

    LT  shift, and go to state 52
    GT  shift, and go to state 53
    LE  shift, and go to state 54
    GE  shift, and go to state 55
    NE  shift, and go to state 56
    EQ  shift, and go to state 57


state 48

   17 S4: whr condition .

    $default  reduce using rule 17 (S4)


state 49

   19 G: g . by column

    by  shift, and go to state 58


state 50

    2 s: crt view id as slct star frm id MT join S4 G . sort sc

    odr  shift, and go to state 59

    $default  reduce using rule 32 (sort)

    sort  go to state 60


state 51

    3 s: crt view id as slct column frm id MT join S4 G . sort sc

    odr  shift, and go to state 59

    $default  reduce using rule 32 (sort)

    sort  go to state 61


state 52

    8 condition: id LT . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 65


state 53

    9 condition: id GT . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 66


state 54

   10 condition: id LE . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 67


state 55

   11 condition: id GE . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 68


state 56

   12 condition: id NE . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 69


state 57

   13 condition: id EQ . F logical

    si   shift, and go to state 62
    di   shift, and go to state 63
    num  shift, and go to state 64

    F  go to state 70


state 58

   19 G: g by . column

    id   shift, and go to state 10
    sum  shift, and go to state 12
    cnt  shift, and go to state 13
    avg  shift, and go to state 14

    column   go to state 71
    agrfunc  go to state 16


state 59

   29 sort: odr . by id
   30     | odr . by id asc
   31     | odr . by id desc

    by  shift, and go to state 72


state 60

    2 s: crt view id as slct star frm id MT join S4 G sort . sc

    sc  shift, and go to state 73


state 61

    3 s: crt view id as slct column frm id MT join S4 G sort . sc

    sc  shift, and go to state 74


state 62

   33 F: si . id si

    id  shift, and go to state 75


state 63

   34 F: di . id di

    id  shift, and go to state 76


state 64

   35 F: num . ds num ds num
   36  | num .

    ds  shift, and go to state 77

    $default  reduce using rule 36 (F)


state 65

    8 condition: id LT F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 80


state 66

    9 condition: id GT F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 81


state 67

   10 condition: id LE F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 82


state 68

   11 condition: id GE F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 83


state 69

   12 condition: id NE F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 84


state 70

   13 condition: id EQ F . logical

    AND  shift, and go to state 78
    OR   shift, and go to state 79

    $default  reduce using rule 16 (logical)

    logical  go to state 85


state 71

   19 G: g by column .

    $default  reduce using rule 19 (G)


state 72

   29 sort: odr by . id
   30     | odr by . id asc
   31     | odr by . id desc

    id  shift, and go to state 86


state 73

    2 s: crt view id as slct star frm id MT join S4 G sort sc .

    $default  reduce using rule 2 (s)


state 74

    3 s: crt view id as slct column frm id MT join S4 G sort sc .

    $default  reduce using rule 3 (s)


state 75

   33 F: si id . si

    si  shift, and go to state 87


state 76

   34 F: di id . di

    di  shift, and go to state 88


state 77

   35 F: num ds . num ds num

    num  shift, and go to state 89


state 78

   14 logical: AND . condition

    id  shift, and go to state 47

    condition  go to state 90


state 79

   15 logical: OR . condition

    id  shift, and go to state 47

    condition  go to state 91


state 80

    8 condition: id LT F logical .

    $default  reduce using rule 8 (condition)


state 81

    9 condition: id GT F logical .

    $default  reduce using rule 9 (condition)


state 82

   10 condition: id LE F logical .

    $default  reduce using rule 10 (condition)


state 83

   11 condition: id GE F logical .

    $default  reduce using rule 11 (condition)


state 84

   12 condition: id NE F logical .

    $default  reduce using rule 12 (condition)


state 85

   13 condition: id EQ F logical .

    $default  reduce using rule 13 (condition)


state 86

   29 sort: odr by id .
   30     | odr by id . asc
   31     | odr by id . desc

    asc   shift, and go to state 92
    desc  shift, and go to state 93

    $default  reduce using rule 29 (sort)


state 87

   33 F: si id si .

    $default  reduce using rule 33 (F)


state 88

   34 F: di id di .

    $default  reduce using rule 34 (F)


state 89

   35 F: num ds num . ds num

    ds  shift, and go to state 94


state 90

   14 logical: AND condition .

    $default  reduce using rule 14 (logical)


state 91

   15 logical: OR condition .

    $default  reduce using rule 15 (logical)


state 92

   30 sort: odr by id asc .

    $default  reduce using rule 30 (sort)


state 93

   31 sort: odr by id desc .

    $default  reduce using rule 31 (sort)


state 94

   35 F: num ds num ds . num

    num  shift, and go to state 95


state 95

   35 F: num ds num ds num .

    $default  reduce using rule 35 (F)
